[gd_scene load_steps=2 format=3 uid="uid://bx5ywq4s3m8rl"]

[ext_resource type="Script" path="res://WebOfFate/ui/hand_selection_panel.gd" id="1_script"]

[node name="HandSelectionPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -200.0
offset_right = 350.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose Your Hand"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Select 5 cards to keep. The rest will be shuffled back."
horizontal_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 10

[node name="BottomBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="SelectionCountLabel" type="Label" parent="VBoxContainer/BottomBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "0 / 5 selected"

[node name="ConfirmButton" type="Button" parent="VBoxContainer/BottomBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Confirm Selection"
